@@ -1,3 +1,9 @@
+2017-08-04  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m-cookie.el (w3m-cookie-1-acceptable-p):
+	Use url-domsuf-cookie-allowed-p if available to check if a domain is
+	unique to allow having cookies set.  [emacs-w3m:12782]
+
 2017-08-03  Boruch Baum  <boruch_baum@gmx.com>
 
 	* w3m.el (w3m-scroll-up, w3m-scroll-down): Remove restriction of using
